[gd_scene load_steps=4 format=3 uid="uid://dtfvyr6jydv77"]

[ext_resource type="Texture2D" uid="uid://thego66j1o6u" path="res://Blue.png" id="1_3pbi5"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_gnjvi"]
[ext_resource type="Texture2D" uid="uid://bk7vn3pd48bc" path="res://nextLevelLogo.png" id="2_ok0h2"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_gnjvi")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3pbi5")
stretch_mode = 1

[node name="Title" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -93.0
offset_right = 208.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ok0h2")

[node name="NextLevel" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.0
offset_top = -105.0
offset_right = 276.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = 64.0
offset_right = 98.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Play"

[connection signal="pressed" from="NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
